# home-voice

./: README.md  pyproject.toml  voice_loop.py  voice_loop_mac.py
