[project]
name = "voice-loop"
version = "0.2.0"
description = "A minimal voice agent loop. macOS Apple Silicon + Linux Nvidia GPU."
requires-python = ">=3.11"
dependencies = [
    # Both platforms
    "sounddevice>=0.5",
    "numpy>=2.1",
    "silero-vad>=5.1",
    "onnxruntime>=1.17",
    "livekit>=1.1.5",
    "transformers>=4.40",
    "torch>=2.0",
    "soundfile>=0.12",
    "openai>=1.0",
    "faster-whisper>=1.0",
    "piper-tts>=1.2",
    "coqui-tts>=0.22",

    # macOS only
    "mlx-vlm>=0.4.3 ; sys_platform == 'darwin'",

    # Linux only
    "accelerate>=0.26 ; sys_platform == 'linux'",
    "bitsandbytes>=0.43 ; sys_platform == 'linux'",
]
